# ofci

./: README.md
extraction/: Dockerfile  README.md  create_projects.sh  extract.sh  trace.sh
extraction/dataset-prep/: README.md  prepare.py
extraction/deploy/: .env  docker-compose.yml
extraction/helpers/: start_extraction.sh  start_trace.sh
model/: README.md  albert.py  evaluate.py  finetune-albert.py  fragment-calculate-means.py  fragment-mean-indices.py  requirements.txt  sqlite-importer.py
model/ofci/evaluation/: __init__.py  model.py
ofci/: .gitignore  README.md
ofci/ghidra_scripts/: OFCIAnalysisSelection.java  OFCIExtractorV2.java  OFCITokenizeCurrentFunction.java  OFCITraceExtractor.java
ofci/src/main/java/ofci/: Dao.java  Factory.java  FunctionMetadata.java  FunctionParser.java  GlobalFunctionInfo.java  InstructionParser.java  OFCIPlugin.java  OFCIProvider.java  ParserState.java  Tokenizer.java
ofci/src/main/java/ofci/impl/: DefaultDao.java  DefaultFunctionMetadata.java  DefaultFunctionParser.java  DefaultGlobalFunctionInfo.java  (+6 more)
ofci_db/: Cargo.toml  README.md
ofci_db/migrations/2021-07-30-152516_base_db/: down.sql  up.sql
ofci_db/migrations/2021-08-02-145656_token_updates/: down.sql  up.sql
ofci_db/migrations/2021-08-19-165819_default_categories/: down.sql  up.sql
ofci_db/src/: lib.rs  models.rs  schema.rs
tracer/: .gitignore  README.md
tracer-gen/: README.md  gen-ea.sh  gen-tigress.py  gen-trace-virt-ea.sh  gen-trace-virt.sh  gen-virt-ea.sh  gen-virt.sh  gen.py
tracer/OFCITracer/: OFCITracer.cpp  makefile.rules
(+1 files in other folders)
